--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "dev": "vite",
     "build": "vue-tsc && vite build",
     "preview": "vite preview",
-    "commit":"cz"
+    "commit": "cz"
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
+    "dhtmlx-gantt": "^8.0.7",
     "element-plus": "^2.5.3",
     "vue": "^3.3.11",
     "vue-router": "^4.0.13"
