--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "sass": "^1.70.0",
     "sass-loader": "^14.0.0",
     "typescript": "^5.2.2",
+    "unplugin-auto-import": "^0.18.2",
+    "unplugin-vue-components": "^0.27.3",
     "vite": "^5.0.8",
     "vue-tsc": "^1.8.25"
   }
