--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
     "dhtmlx-gantt": "^8.0.7",
+    "echarts": "^5.5.1",
     "element-plus": "^2.5.3",
     "vue": "^3.3.11",
     "vue-router": "^4.0.13"
