--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
+    "@iconify/vue": "^3.2.1",
+    "axios": "^1.7.2",
     "dhtmlx-gantt": "^8.0.7",
     "echarts": "^5.5.1",
     "element-plus": "^2.5.3",
+    "pinia": "^2.2.0",
     "vue": "^3.3.11",
     "vue-router": "^4.0.13"
   },
@@ -26,6 +29,7 @@
     "unplugin-auto-import": "^0.18.2",
     "unplugin-vue-components": "^0.27.3",
     "vite": "^5.0.8",
+    "vite-plugin-svg-icons": "^2.0.1",
     "vue-tsc": "^1.8.25"
   }
 }
