--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,10 +25,10 @@
 
     "noImplicitAny": false, // 是否在表达式和声明上有隐含的any类型时报错
     "paths": {
+      "@": ["src"],
       "@/*": ["src/*"]
     }
   },
   "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
-
