--- a/package.json
+++ b/package.json
@@ -24,12 +24,15 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.5.2",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
+    "mockjs": "^1.1.0",
+    "prettier": "^3.3.3",
     "sass": "^1.70.0",
     "sass-loader": "^14.0.0",
     "typescript": "^5.2.2",
     "unplugin-auto-import": "^0.18.2",
     "unplugin-vue-components": "^0.27.3",
     "vite": "^5.0.8",
+    "vite-plugin-mock": "^3.0.2",
     "vite-plugin-svg-icons": "^2.0.1",
     "vue-tsc": "^1.8.25"
   }
