--- a/package.json
+++ b/package.json
@@ -1,40 +1,75 @@
 {
-  "name": "vue3-demo",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vue-tsc && vite build",
-    "preview": "vite preview",
-    "commit": "cz"
-  },
-  "dependencies": {
-    "@element-plus/icons-vue": "^2.3.1",
-    "@iconify/vue": "^3.2.1",
-    "axios": "^1.7.2",
-    "dhtmlx-gantt": "^8.0.7",
-    "echarts": "^5.5.1",
-    "element-plus": "^2.5.3",
-    "pinia": "^2.2.0",
-    "pinia-plugin-persistedstate": "^3.2.1",
-    "qs": "^6.12.0",
-    "vue": "^3.3.11",
-    "vue-router": "^4.0.13"
-  },
-  "devDependencies": {
-    "@vitejs/plugin-vue": "^4.5.2",
-    "@vitejs/plugin-vue-jsx": "^3.1.0",
-    "mockjs": "^1.1.0",
-    "prettier": "^3.3.3",
-    "sass": "^1.70.0",
-    "sass-loader": "^14.0.0",
-    "typescript": "^5.2.2",
-    "unplugin-auto-import": "^0.18.2",
-    "unplugin-vue-components": "^0.27.3",
-    "vite": "^5.0.8",
-    "vite-plugin-mock": "^3.0.2",
-    "vite-plugin-svg-icons": "^2.0.1",
-    "vue-tsc": "^1.8.25"
-  }
+	"name": "vue3-demo",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
+		"dev": "vite",
+		"build": "vue-tsc && vite build",
+		"preview": "vite preview",
+		"commit": "git-cz",
+		"prepare": "husky install"
+	},
+	"dependencies": {
+		"@element-plus/icons-vue": "^2.3.1",
+		"@iconify/vue": "^3.2.1",
+		"axios": "^1.7.2",
+		"dhtmlx-gantt": "^8.0.7",
+		"echarts": "^5.5.1",
+		"element-plus": "^2.5.3",
+		"pinia": "^2.2.0",
+		"pinia-plugin-persistedstate": "^3.2.1",
+		"qs": "^6.12.0",
+		"vue": "^3.3.11",
+		"vue-router": "^4.0.13"
+	},
+	"devDependencies": {
+		"@commitlint/cli": "^19.7.1",
+		"@commitlint/config-conventional": "^19.7.1",
+		"@eslint/js": "^9.21.0",
+		"@vitejs/plugin-vue": "^4.5.2",
+		"@vitejs/plugin-vue-jsx": "^3.1.0",
+		"commitizen": "4.3.0",
+		"cz-conventional-changelog": "3.3.0",
+		"eslint": "^9.21.0",
+		"eslint-plugin-prettier": "^5.2.3",
+		"eslint-plugin-vue": "^9.32.0",
+		"globals": "^16.0.0",
+		"husky": "^9.1.7",
+		"lint-staged": "^15.4.3",
+		"mockjs": "^1.1.0",
+		"prettier": "^3.3.3",
+		"sass": "^1.70.0",
+		"sass-loader": "^14.0.0",
+		"typescript": "^5.2.2",
+		"typescript-eslint": "^8.24.1",
+		"unplugin-auto-import": "^0.18.2",
+		"unplugin-vue-components": "^0.27.3",
+		"vite": "^5.0.8",
+		"vite-plugin-mock": "^3.0.2",
+		"vite-plugin-svg-icons": "^2.0.1",
+		"vue-tsc": "^1.8.25"
+	},
+	"config": {
+		"commitizen": {
+			"path": "node_modules/cz-conventional-changelog"
+		}
+	},
+	"husky": {
+		"hooks": {
+			"pre-commit": "lint-staged",
+			"commit-msg": "commitlint --config .commitlintrc.js -E HUSKY_GIT_PARAMS"
+		}
+	},
+	"lint-staged": {
+		"*.{ts,tsx,js}": [
+			"eslint --config eslint.config.js"
+		],
+		"*.{css,less,scss}": [
+			"stylelint --config .stylelintrc.js"
+		],
+		"*.{ts,tsx,js,json,html,yml,css,less,scss,md}": [
+			"prettier --write"
+		]
+	}
 }
