--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -5,7 +5,7 @@ name: Deploy VitePress site to Pages
 on:
   # 在针对 `main` 分支的推送上运行
   push:
-    branches: [main, master]  # 从gh-pages改为main和master
+    branches: [gh-pages]  # 从gh-pages改为main和master
 
   # 允许你从 Actions 选项卡手动运行此工作流程
   workflow_dispatch:
