fix：修改publish.yml配置

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -49,6 +49,8 @@ jobs:
         uses: actions/upload-pages-artifact@v3
         with:
           path: docs/.vitepress/dist
+          branch: gh-pages
+          clean: true
 
   # 部署工作
   deploy:
