--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"@commitlint/cli": "^19.7.1",
 		"@commitlint/config-conventional": "^19.7.1",
 		"@eslint/js": "^9.21.0",
+		"@types/node": "^22.13.7",
 		"@vitejs/plugin-vue": "^4.5.2",
 		"@vitejs/plugin-vue-jsx": "^3.1.0",
 		"commitizen": "4.3.0",
