--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"axios": "^1.7.2",
 		"echarts": "^5.5.1",
 		"element-plus": "^2.5.3",
+		"nprogress": "^0.2.0",
 		"pinia": "^2.2.0",
 		"pinia-plugin-persistedstate": "^3.2.1",
 		"qs": "^6.12.0",
